--- a/app/src/main/res/menu/setting_menu.xml
+++ b/app/src/main/res/menu/setting_menu.xml
@@ -5,6 +5,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".MainActivity"
     >
+
+    <item
+        android:id="@+id/item_menu_setting_check_payments"
+        android:icon="@drawable/add_card"
+        android:iconTint="@color/green_background"
+        android:title="@string/check_payments_title"
+        android:titleCondensed="@string/check_payments_title"
+        app:showAsAction="ifRoom" />
+
     <item
         android:id="@+id/item_menu_setting_credit_card"
         android:icon="@drawable/ic_credit_card_foreground"
@@ -26,6 +35,13 @@
         android:iconTint="@color/green_background"
         android:title="@string/account"
         app:showAsAction="ifRoom" />
+
+    <item
+        android:id="@+id/item_menu_setting_check_paids"
+        android:icon="@drawable/ic_credit_card_foreground"
+        android:iconTint="@color/green_background"
+        android:title="@string/paids"
+        />
 
     <item
     android:id="@+id/item_menu_setting_about_it"
