--- a/app/src/main/res/layout/fragment_paid_item_list.xml
+++ b/app/src/main/res/layout/fragment_paid_item_list.xml
@@ -5,11 +5,13 @@
     app:strokeWidth="@dimen/stroke_with"
     app:cardCornerRadius="@dimen/radius_corner"
     app:cardElevation="@dimen/card_elevator"
+    android:layout_margin="@dimen/space_min"
     android:orientation="vertical"
     android:layout_height="wrap_content">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:padding="@dimen/space_min"
         android:background="?attr/colorPrimary"
         android:orientation="horizontal">
         <com.google.android.material.textfield.TextInputLayout
