--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,6 @@
     <color name="green_background">#5DBC61</color>
     <color name="green_background_dark">#447046</color>
     <color name="green_light_trans">#1DD0EFC2</color>
+    <color name="grey_dark"> #1D787878</color>
+    <color name="brown">#915B35</color>
 </resources>
