--- a/app/src/main/res/layout/list_credit_card_quote.xml
+++ b/app/src/main/res/layout/list_credit_card_quote.xml
@@ -24,6 +24,7 @@
             android:id="@+id/spCreditCardQCC"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:text="@string/account"
             android:textAlignment="center"/>
         </com.google.android.material.textfield.TextInputLayout>
 
