--- a/app/src/main/res/layout-sw720dp/quotes_paid_item_list.xml
+++ b/app/src/main/res/layout-sw720dp/quotes_paid_item_list.xml
@@ -121,12 +121,12 @@
         </LinearLayout>
 
         <ImageButton
-            android:id="@+id/btnShowPaid"
-            android:layout_width="90dp"
-            android:layout_height="42dp"
+            android:id="@+id/btn_more_qpil"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="#00FFFFFF"
-            app:srcCompat="@drawable/search" />
+            android:background="?attr/colorPrimaryVariant"
+            app:srcCompat="@drawable/more_vertical" />
 
     </LinearLayout>
 </com.google.android.material.card.MaterialCardView>
