--- a/app/src/main/res/layout/bought_item_list.xml
+++ b/app/src/main/res/layout/bought_item_list.xml
@@ -42,26 +42,11 @@
             android:textStyle="bold" />
 
         <ImageButton
-            android:id="@+id/btn_edit_bil"
+            android:id="@+id/btn_more_bil"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:background="#00FFFFFF"
-            app:srcCompat="@drawable/ic_baseline_edit_24" />
-
-        <ImageButton
-            android:id="@+id/btnAmortizationItemLCCS"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:background="@color/green_background"
-            android:layout_marginEnd="@dimen/space_min"
-            app:srcCompat="@android:drawable/ic_menu_search" />
-
-        <ImageButton
-            android:id="@+id/btnDeleteItemLCCS"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:background="@color/green_background"
-            app:srcCompat="@drawable/ic_baseline_delete_24" />
+            android:background="?attr/colorPrimaryVariant"
+            app:srcCompat="@drawable/more_vertical" />
 
     </LinearLayout>
 
