--- a/app/src/main/res/layout/fragment_monthly_credit_item_list.xml
+++ b/app/src/main/res/layout/fragment_monthly_credit_item_list.xml
@@ -15,14 +15,15 @@
             android:hint="@string/date_pay_quote"
             style="@style/MaterialTextInputLayoutView"
             android:layout_height="match_parent">
+
             <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="match_parent"
-                android:textAlignment="center"
                 android:id="@+id/date_pay_quote_mcil"
-                android:text="@string/date_hint"
-                android:enabled="false"
                 style="@style/MaterialTextInputLayoutView"
-                android:layout_height="wrap_content"/>
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:enabled="false"
+                android:text="@string/date_hint"
+                android:textAlignment="center" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -32,14 +33,15 @@
             android:hint="@string/name"
             style="@style/MaterialTextInputLayoutView"
             android:layout_height="match_parent">
+
             <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="match_parent"
-                android:text="@string/name"
                 android:id="@+id/name_mcil"
-                android:enabled="false"
                 style="@style/MaterialTextInputLayoutView"
-                android:textAlignment="center"
-                android:layout_height="wrap_content"/>
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:enabled="false"
+                android:text="@string/name"
+                android:textAlignment="center" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -50,30 +52,24 @@
             app:prefixText="$"
             style="@style/MaterialTextInputLayoutView"
             android:layout_height="match_parent">
+
             <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="match_parent"
-                android:textAlignment="textEnd"
-                android:text="@string/money_hint"
-                android:enabled="false"
-                style="@style/MaterialTextInputLayoutView"
                 android:id="@+id/value_mcil"
-                android:layout_height="wrap_content"/>
+                style="@style/MaterialTextInputLayoutView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:enabled="false"
+                android:text="@string/money_hint"
+                android:textAlignment="textEnd" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
         <ImageView
-            android:id="@+id/btn_edit_mcil"
+            android:id="@+id/btn_more_mcil"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="0"
-            app:srcCompat="@drawable/search" />
-
-        <ImageView
-            android:id="@+id/btn_delete_mcil"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="0"
-            app:srcCompat="@drawable/ic_baseline_delete_24" />
+            app:srcCompat="@drawable/more_vertical" />
     </LinearLayout>
 
 
