--- a/app/src/main/res/layout/fragment_paid_item_list.xml
+++ b/app/src/main/res/layout/fragment_paid_item_list.xml
@@ -15,14 +15,15 @@
             android:hint="@string/date_paid"
             style="@style/MaterialTextInputLayoutView"
             android:layout_height="match_parent">
+
             <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="match_parent"
-                android:textAlignment="center"
                 android:id="@+id/date_paid_pil"
-                android:text="@string/date_hint"
-                android:enabled="false"
                 style="@style/MaterialTextInputLayoutView"
-                android:layout_height="wrap_content"/>
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:enabled="false"
+                android:text="@string/date_hint"
+                android:textAlignment="center" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -32,14 +33,15 @@
             android:hint="@string/name"
             style="@style/MaterialTextInputLayoutView"
             android:layout_height="match_parent">
+
             <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="match_parent"
-                android:text="@string/name"
                 android:id="@+id/name_pil"
-                android:enabled="false"
                 style="@style/MaterialTextInputLayoutView"
-                android:textAlignment="center"
-                android:layout_height="wrap_content"/>
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:enabled="false"
+                android:text="@string/name"
+                android:textAlignment="center" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -50,23 +52,24 @@
             app:prefixText="$"
             style="@style/MaterialTextInputLayoutView"
             android:layout_height="match_parent">
+
             <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="match_parent"
-                android:textAlignment="textEnd"
+                android:id="@+id/value_pil"
                 style="@style/MaterialTextInputLayoutView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:enabled="false"
                 android:text="@string/money_hint"
-                android:id="@+id/value_pil"
-                android:layout_height="wrap_content"/>
+                android:textAlignment="textEnd" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
         <ImageView
-            android:id="@+id/btn_delete_pil"
+            android:id="@+id/btn_more_pil"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="0"
-            app:srcCompat="@drawable/ic_baseline_delete_24" />
+            app:srcCompat="@drawable/more_vertical" />
     </LinearLayout>
 
 
