--- a/app/src/main/res/layout/fragment_period_credit_item_list.xml
+++ b/app/src/main/res/layout/fragment_period_credit_item_list.xml
@@ -62,11 +62,11 @@
 
 
         <ImageView
-            android:id="@+id/btn_credits_pcil"
+            android:id="@+id/btn_more_pcil"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="0"
-            app:srcCompat="@android:drawable/ic_menu_search" />
+            app:srcCompat="@drawable/more_vertical" />
     </LinearLayout>
 
 </com.google.android.material.card.MaterialCardView>
