--- a/app/src/main/res/layout/quote_credit_save_item_list.xml
+++ b/app/src/main/res/layout/quote_credit_save_item_list.xml
@@ -67,21 +67,13 @@
             android:textSize="18sp"
             android:textStyle="bold" />
 
-
         <ImageButton
-            android:id="@+id/btnAmortization"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@color/green_background"
-            android:layout_weight="0"
-            app:srcCompat="@android:drawable/ic_menu_search" />
-        <ImageButton
-            android:id="@+id/btnDelete"
+            android:id="@+id/btn_more_qcsil"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:background="@color/green_background"
+            android:background="?attr/colorPrimaryVariant"
             android:layout_weight="0"
-            app:srcCompat="@drawable/ic_baseline_delete_24" />
+            app:srcCompat="@drawable/more_vertical" />
 
     </LinearLayout>
 
