--- a/app/src/main/res/layout/fragment_input_item_list.xml
+++ b/app/src/main/res/layout/fragment_input_item_list.xml
@@ -22,7 +22,7 @@
                 style="@style/MaterialTextInputLayoutView"
                 android:id="@+id/date_input_iil"
                 android:text="@string/date_hint"
-                android:layout_height="wrap_content"/>
+                android:layout_height="match_parent"/>
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -39,7 +39,7 @@
                 style="@style/MaterialTextInputLayoutView"
                 android:id="@+id/name_iil"
                 android:textAlignment="center"
-                android:layout_height="wrap_content"/>
+                android:layout_height="match_parent"/>
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -57,16 +57,16 @@
                 style="@style/MaterialTextInputLayoutView"
                 android:enabled="false"
                 android:id="@+id/value_iil"
-                android:layout_height="wrap_content"/>
+                android:layout_height="match_parent"/>
 
         </com.google.android.material.textfield.TextInputLayout>
 
         <ImageView
-            android:id="@+id/btn_delete_iil"
+            android:id="@+id/btn_more_iil"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="0"
-            app:srcCompat="@drawable/ic_baseline_delete_24" />
+            app:srcCompat="@drawable/more_vertical" />
     </LinearLayout>
 
 
