--- a/app/src/main/res/layout/fragment_additional_list.xml
+++ b/app/src/main/res/layout/fragment_additional_list.xml
@@ -17,6 +17,15 @@
             android:layout_height="wrap_content"
             android:padding="@dimen/space_min"
             android:orientation="vertical" >
+
+            <ProgressBar
+                android:id="@+id/pb_load_adl"
+                style="?android:attr/progressBarStyle"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:elevation="@dimen/card_elevator_5"
+                android:progressBackgroundTint="?attr/colorPrimaryVariant"/>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
