--- a/app/src/main/res/layout/fragment_paid_list.xml
+++ b/app/src/main/res/layout/fragment_paid_list.xml
@@ -5,9 +5,6 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="@dimen/space_min"
-    app:strokeWidth="@dimen/stroke_with"
-    app:cardCornerRadius="@dimen/radius_corner"
-    app:cardElevation="@dimen/card_elevator"
     tools:context=".finanzas.controller.PaidListFragment">
 
     <ScrollView
@@ -19,6 +16,11 @@
             android:layout_height="wrap_content"
             android:padding="@dimen/space_min"
             android:orientation="vertical">
+
+            <ProgressBar
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/pb_load_pdl"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
