--- a/app/src/main/res/layout/fragment_paids.xml
+++ b/app/src/main/res/layout/fragment_paids.xml
@@ -18,6 +18,10 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:padding="@dimen/space_min">
+            <ProgressBar
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/pb_load_ps"/>
 
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
