--- a/app/src/main/res/layout-land/fragment_list_bought.xml
+++ b/app/src/main/res/layout-land/fragment_list_bought.xml
@@ -16,6 +16,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+            <ProgressBar
+                android:id="@+id/pb_load_lbcc"
+                style="?android:attr/progressBarStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:elevation="@dimen/card_elevator_5"
+                android:progressBackgroundTint="?attr/colorPrimaryVariant"/>
+
 
             <LinearLayout
                 android:id="@+id/llSplitDownValues"
