--- a/app/src/main/res/layout-sw720dp/list_credit_card_quote.xml
+++ b/app/src/main/res/layout-sw720dp/list_credit_card_quote.xml
@@ -11,6 +11,16 @@
     android:layout_height="match_parent"
     android:padding="@dimen/space_min"
     android:orientation="vertical">
+
+    <ProgressBar
+        android:id="@+id/pb_load_qcc"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:elevation="@dimen/card_elevator_5"
+        android:progressBackgroundTint="@color/green_background"
+        android:rotationX="-2" />
+
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
