--- a/app/src/main/res/layout/fragment_account_list.xml
+++ b/app/src/main/res/layout/fragment_account_list.xml
@@ -15,6 +15,14 @@
             android:padding="@dimen/space_min"
             android:orientation="vertical">
 
+            <ProgressBar
+                android:id="@+id/pb_load_al"
+                style="?android:attr/progressBarStyle"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:elevation="@dimen/card_elevator_5"
+                android:progressBackgroundTint="?attr/colorPrimaryVariant"/>
+
             <androidx.recyclerview.widget.RecyclerView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
