--- a/app/src/main/res/layout/fragment_amortization_table.xml
+++ b/app/src/main/res/layout/fragment_amortization_table.xml
@@ -13,7 +13,10 @@
         android:layout_height="match_parent"
         android:layout_margin="@dimen/space_min"
         android:orientation="vertical">
-
+        <ProgressBar
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/pb_load_at"/>
 
         <LinearLayout
             android:layout_width="match_parent"
