--- a/app/src/main/res/layout/fragment_credit_list.xml
+++ b/app/src/main/res/layout/fragment_credit_list.xml
@@ -19,6 +19,11 @@
                 android:orientation="vertical"
                 android:layout_height="wrap_content">
 
+                <ProgressBar
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/pb_load_cfl"/>
+
                 <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
