--- a/app/src/main/res/layout/fragment_input_list.xml
+++ b/app/src/main/res/layout/fragment_input_list.xml
@@ -15,6 +15,11 @@
             android:padding="@dimen/space_min"
             android:orientation="vertical">
 
+            <ProgressBar
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/pb_load_il"/>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
