--- a/app/src/main/res/layout/fragment_list_projection.xml
+++ b/app/src/main/res/layout/fragment_list_projection.xml
@@ -15,6 +15,10 @@
             android:layout_height="wrap_content"
             android:padding="@dimen/space_min"
             android:orientation="vertical">
+            <ProgressBar
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/pb_load_lpj"/>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
