--- a/app/src/main/res/layout/fragment_monthly_credit_list.xml
+++ b/app/src/main/res/layout/fragment_monthly_credit_list.xml
@@ -14,6 +14,11 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
+        <ProgressBar
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/pb_load_mcl"/>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
