--- a/app/src/main/res/layout/fragment_period_credit_list.xml
+++ b/app/src/main/res/layout/fragment_period_credit_list.xml
@@ -5,9 +5,6 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="@dimen/space_min"
-    app:strokeWidth="@dimen/stroke_with"
-    app:cardCornerRadius="@dimen/radius_corner"
-    android:elevation="@dimen/card_elevator"
     tools:context=".finanzas.controller.PeriodCreditListFragment">
 
     <ScrollView
@@ -18,6 +15,11 @@
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:padding="@dimen/space_min">
+
+            <ProgressBar
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/pb_load_pcl"/>
 
             <androidx.recyclerview.widget.RecyclerView
                 android:layout_width="match_parent"
