--- a/app/src/main/res/layout/fragment_periods_paid.xml
+++ b/app/src/main/res/layout/fragment_periods_paid.xml
@@ -11,6 +11,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <ProgressBar
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/pb_load_ppl"/>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
