--- a/app/src/main/res/layout/list_credit_card_quote.xml
+++ b/app/src/main/res/layout/list_credit_card_quote.xml
@@ -13,6 +13,13 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+        <ProgressBar
+            android:id="@+id/pb_load_qcc"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:elevation="@dimen/card_elevator_5"
+            android:progressBackgroundTint="?attr/colorPrimaryVariant"/>
 
 
         <com.google.android.material.textfield.TextInputLayout
