--- a/app/src/main/res/layout/fragment_monthly_credit_list.xml
+++ b/app/src/main/res/layout/fragment_monthly_credit_list.xml
@@ -2,7 +2,7 @@
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="@dimen/space_min"
     tools:context=".finanzas.controller.MonthlyCreditListFragment">
