--- a/app/src/main/res/layout-sw720dp/buys_credit_card.xml
+++ b/app/src/main/res/layout-sw720dp/buys_credit_card.xml
@@ -49,7 +49,7 @@
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/lCreditCardAssign"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             style="@style/MaterialTextInputLayoutView"
             android:hint="@string/assing_credit_Card" >
