--- a/app/src/main/res/layout-sw720dp/quotes_paid_item_list.xml
+++ b/app/src/main/res/layout-sw720dp/quotes_paid_item_list.xml
@@ -1,16 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="5dp"
-    android:orientation="vertical"
-
-    app:layout_dodgeInsetEdges="all">
-    <com.google.android.material.card.MaterialCardView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
         android:layout_margin="@dimen/space_min">
     <LinearLayout
         android:layout_width="match_parent"
@@ -130,4 +123,3 @@
 
     </LinearLayout>
 </com.google.android.material.card.MaterialCardView>
-</androidx.constraintlayout.widget.ConstraintLayout>
