--- a/app/src/main/res/layout-land/bought_item_list.xml
+++ b/app/src/main/res/layout-land/bought_item_list.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginRight="@dimen/space_min">
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/space_min">
 
     <LinearLayout
         android:id="@+id/llTitleBought"
