fixed issue with timeout if fields when your are editing values, and showing save button when the validation fields is true, and fix issue with duplicate recurrent payment when it was ending the payment, and fix issue when payment differ quotes it duplicate record , issue with filter in query on end field in credit card for some reason it is not posible to validate date, there is a fix but we need to delete old code in 12 months when old date code does not working anymore
Signed-off-by: alejandro parra <alejandroparral@gmail.com>

--- a/app/src/main/res/layout/fragment_create_credit_card.xml
+++ b/app/src/main/res/layout/fragment_create_credit_card.xml
@@ -64,8 +64,7 @@
                 android:id="@+id/edCutOffDayCCC"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="number"
-                android:textAlignment="textEnd" />
+                android:inputType="number" />
             </com.google.android.material.textfield.TextInputLayout>
 
 
