--- a/app/src/main/res/layout/fragment_input.xml
+++ b/app/src/main/res/layout/fragment_input.xml
@@ -45,6 +45,8 @@
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                app:prefixText="$"
+                app:endIconMode="clear_text"
                 android:hint="@string/name">
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
@@ -57,6 +59,8 @@
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                app:prefixText="$"
+                app:endIconMode="clear_text"
                 android:hint="@string/value">
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
