--- a/app/src/main/res/layout/fragment_list_bought.xml
+++ b/app/src/main/res/layout/fragment_list_bought.xml
@@ -32,44 +32,6 @@
                 android:orientation="horizontal">
 
                 <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/lbCurrentCapitalList"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    app:prefixText="$"
-                    style="@style/MaterialTextInputLayoutView"
-                    android:hint="@string/current_capital_value_short" >
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/tvCurrentCapitalList"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/money_hint"
-                    android:enabled="false"
-                    style="@style/MaterialTextInputLayoutView"
-                    android:textAlignment="textEnd" />
-                </com.google.android.material.textfield.TextInputLayout>
-
-                <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/lbQuoteCapitalList"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    app:prefixText="$"
-                    style="@style/MaterialTextInputLayoutView"
-                    android:hint="@string/quote_capital_value_short" >
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/tvQuoteCapitalList"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/money_hint"
-                    android:enabled="false"
-                    style="@style/MaterialTextInputLayoutView"
-                    android:textAlignment="textEnd" />
-                </com.google.android.material.textfield.TextInputLayout>
-
-                <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/lbCapitalList"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -86,51 +48,6 @@
                         android:enabled="false"
                         style="@style/MaterialTextInputLayoutView"
                         android:textAlignment="textEnd" />
-                </com.google.android.material.textfield.TextInputLayout>
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/llSplitDownCurrentInterest"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/lbCurrentInterestList"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    app:prefixText="$"
-                    style="@style/MaterialTextInputLayoutView"
-                    android:hint="@string/current_interest_value_short" >
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/tvCurrentInterestList"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:enabled="false"
-                    style="@style/MaterialTextInputLayoutView"
-                    android:text="@string/money_hint"
-                    android:textAlignment="textEnd" />
-                </com.google.android.material.textfield.TextInputLayout>
-
-                <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/lbQuoteInterestList"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    app:prefixText="$"
-                    style="@style/MaterialTextInputLayoutView"
-                    android:hint="@string/quote_interest_value_short" >
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/tvQuoteInterestList"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:enabled="false"
-                    style="@style/MaterialTextInputLayoutView"
-                    android:text="@string/money_hint"
-                    android:textAlignment="textEnd" />
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
@@ -151,31 +68,7 @@
                         style="@style/MaterialTextInputLayoutView"
                         android:textAlignment="textEnd" />
                 </com.google.android.material.textfield.TextInputLayout>
-            </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/lbPendingToPayList"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    app:prefixText="$"
-                    style="@style/MaterialTextInputLayoutView"
-                    android:hint="@string/pending_to_pay_short" >
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/tvPendingToPayList"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/money_hint"
-                    android:enabled="false"
-                    style="@style/MaterialTextInputLayoutView"
-                    android:textAlignment="viewEnd" />
-                </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/lbTotalQuoteList"
@@ -197,6 +90,13 @@
                     android:textAlignment="textEnd" />
                 </com.google.android.material.textfield.TextInputLayout>
             </LinearLayout>
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btn_see_more_qccl"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/see_more"
+                />
 
             <ScrollView
                 android:layout_width="match_parent"
